# telegram_bot_api_types

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  chat.rs  file.rs  lib.rs  markup.rs  message.rs  payment.rs  query.rs  sticker.rs  update.rs  user.rs  webhook.rs
