[package]
name = "telegram_bot_api_types"
description = "Telegram bot API types"
categories = ["api-bindings"]
keywords = ["telegram", "bot"]
version = "0.1.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/telegram_bot_api_types"

[dependencies]
serde = { version = "1.0.*", default-features = false, features = ["derive", "std"]}
thiserror = { version = "1.0.*", default-features = false }